added final demo results

--- a/ee123-project/ee123-project-send.ipynb
+++ b/ee123-project/ee123-project-send.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +70,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  0 bcm2835 ALSA: - (hw:0,0), ALSA (0 in, 2 out)\n",
+       "  1 bcm2835 ALSA: IEC958/HDMI (hw:0,1), ALSA (0 in, 2 out)\n",
+       "  2 USB Audio Device: - (hw:1,0), ALSA (1 in, 2 out)\n",
+       "  3 sysdefault, ALSA (0 in, 128 out)\n",
+       "  4 dmix, ALSA (0 in, 2 out)\n",
+       "* 5 default, ALSA (1 in, 2 out)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sd.query_devices()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +135,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/imageio/plugins/_tifffile.py:7285: UserWarning: module 'imageio.plugins._tifffile' has no attribute 'decode_packbits'\n",
+      "  Functionality might be degraded or be slow.\n",
+      "\n",
+      "  warnings.warn(\"%s%s\" % (e, warn))\n",
+      "/usr/local/lib/python3.5/dist-packages/imageio/plugins/_tifffile.py:7285: UserWarning: module 'imageio.plugins._tifffile' has no attribute 'decode_lzw'\n",
+      "  Functionality might be degraded or be slow.\n",
+      "\n",
+      "  warnings.warn(\"%s%s\" % (e, warn))\n",
+      "/usr/local/lib/python3.5/dist-packages/imageio/plugins/_tifffile.py:7285: UserWarning: module 'imageio.plugins._tifffile' has no attribute 'unpack_ints'\n",
+      "  Functionality might be degraded or be slow.\n",
+      "\n",
+      "  warnings.warn(\"%s%s\" % (e, warn))\n",
+      "/usr/local/lib/python3.5/dist-packages/imageio/plugins/_tifffile.py:7285: UserWarning: module 'imageio.plugins._tifffile' has no attribute 'reverse_bitorder'\n",
+      "  Functionality might be degraded or be slow.\n",
+      "\n",
+      "  warnings.warn(\"%s%s\" % (e, warn))\n"
+     ]
+    }
+   ],
    "source": [
     "img_name = \"createrLake.tiff\"\n",
     "image =  imageio.imread(img_name)\n",
@@ -142,7 +181,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending packets\n"
+     ]
+    }
+   ],
    "source": [
     "### APRS packet send image\n",
     "callsign = \"KM6BKP\"\n",
@@ -186,6 +233,13 @@
     "print(time.time() - starttime)\n",
     "byte_img.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -204,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
